tests/snapshots/cli_help__source_list_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
List sources

Usage: mf source list [OPTIONS]

Options:
      --filter <FILTER>         
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -t, --type <KIND>             [possible values: auto, pdf, file, rss, web]
      --no-headers              Suppress the table header row
  -v, --verbose...              Verbose output
      --no-trunc                Disable column truncation
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
