tests/snapshots/cli_help__source_remove_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Remove a source

Usage: mf source remove [OPTIONS] <NAME_OR_PATH>

Arguments:
  <NAME_OR_PATH>  Project-relative source path or registered source name

Options:
      --keep-file               
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -f, --force                   Proceed despite safety checks: overwrite an existing target, or
                                remove an entity referenced by others
  -v, --verbose...              Verbose output
  -y, --yes                     Skip interactive confirmation prompt
  -n, --dry-run                 Preview changes without writing
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
