tests/snapshots/cli_help__source_rename_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Rename a source

Usage: mf source rename [OPTIONS] <OLD_PATH> <NEW_PATH>

Arguments:
  <OLD_PATH>  Current project-relative source path or registered source name
  <NEW_PATH>  New location as a path (cwd-relative or absolute) — e.g. "sources/yuque/renamed.md" or
              "renamed.md" for the current directory. `--project` does not change how this resolves;
              it only requires the result to fall inside that project

Options:
  -f, --force                   Proceed despite safety checks: overwrite an existing target, or
                                remove an entity referenced by others
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -n, --dry-run                 Preview changes without writing
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
