tests/snapshots/cli_help__term_fix_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Apply term corrections to documents (alias of `term lint --fix`)

Usage: mf term fix [OPTIONS] [PATH]

Arguments:
  [PATH]  

Options:
      --article <ARTICLE>            Target a specific article by slug or title
      --root <PATH>                  Mind Repo root directory
      --config <PATH>                Config file path
      --term <NAME>                  Only apply/scan corrections for the named term(s) (repeatable,
                                     exact name)
      --exclude-term <NAME>          Exclude corrections for the named term(s) (repeatable)
  -v, --verbose...                   Verbose output
      --exclude-original <ORIGINAL>  Exclude this exact original text across terms (repeatable)
  -q, --quiet                        Silence non-error output
      --include-quotes               Scan quoted text and blockquotes as well as ordinary prose
  -o, --output <FORMAT>              Output format [default: text] [possible values: text, json]
      --ad-hoc <ORIGINAL=>CORRECT>   Apply an invocation-only correction (repeatable):
                                     ORIGINAL=>CORRECT
      --json                         Shorthand for --output json
      --ad-hoc-from <PATH>           Read invocation-only corrections, one ORIGINAL=>CORRECT per
                                     line
      --no-color                     Disable colored output
      --fix                          Auto-fix issues that have a fixer
  -p, --project <NAME_OR_PATH>       Project name or path (cwd-relative, repo-relative, or absolute)
      --rule <RULE>                  Restrict to a specific lint rule kind
      --severity <LEVEL>             Only emit issues at or above this severity (error|warning|info)
      --max-warnings <N>             Exit 1 when warnings exceed this count
  -n, --dry-run                      Preview fixes without writing (only with --fix)
      --include-suggested            Apply all corrections including suggested
      --min-confidence <0.0..1.0>    Apply suggested corrections at or above this confidence
  -y, --yes                          Skip interactive confirmation prompt
  -h, --help                         Print help
  -V, --version                      Print version
