tests/snapshots/cli_help__term_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Manage terminology

Usage: mf term [OPTIONS] [COMMAND]

Commands:
  list        List terms [aliases: ls]
  new         Create a term
  lint        Lint term consistency in project docs
  update      Update term metadata
  show        Show term details
  remove      Remove a term [aliases: rm]
  rename      Rename a term
  fix         Apply term corrections to documents (alias of `term lint --fix`)
  correction  Manage term corrections
  move        Move a term between scopes [aliases: mv]

Options:
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
  -v, --verbose...              Verbose output
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --json                    Shorthand for --output json
      --no-color                Disable colored output
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
