tests/snapshots/cli_help__term_learn_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Learn a term correction (deprecated: use `term new <NAME> --alias <VARIANT>`)

Usage: mf term learn [OPTIONS]

Options:
      --root <PATH>
          Mind Repo root directory
      --term <TERM>
          Canonical term name (mind primary)
      --alias <ALIAS>
          Variant/alias for the term (mind primary)
      --config <PATH>
          Config file path
      --original <ORIGINAL>
          Deprecated: use --term (canonical) instead
  -v, --verbose...
          Verbose output
      --correct <CORRECT>
          Deprecated: use --alias (variant) instead
  -q, --quiet
          Silence non-error output
      --dry-run
          
      --format <FORMAT>
          Output format [default: text] [possible values: text, json]
      --json
          Shorthand for --format json
      --no-color
          Disable colored output
  -p, --project <NAME>
          Project name for project-scoped operations
      --install-completion <INSTALL_COMPLETION>
          Install shell completion script [possible values: bash, zsh, fish, powershell, elvish]
      --show-completion <SHOW_COMPLETION>
          Show shell completion script [possible values: bash, zsh, fish, powershell, elvish]
  -h, --help
          Print help
  -V, --version
          Print version
