tests/snapshots/cli_help__term_list_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
List terms

Usage: mf term list [OPTIONS]

Options:
      --filter <FILTER>         Match the canonical term name (substring)
      --root <PATH>             Mind Repo root directory
      --config <PATH>           Config file path
      --tag <TAG>               Match the term's tag field
      --alias <ALIAS>           Match the term's alias field (does not match the term name)
  -v, --verbose...              Verbose output
      --has-correction          Only show terms that have at least one correction
  -q, --quiet                   Silence non-error output
  -o, --output <FORMAT>         Output format [default: text] [possible values: text, json]
      --scope <SCOPE>           Filter by scope: project, global, or all (default: project + global
                                fallback)
      --json                    Shorthand for --output json
      --no-headers              Suppress the table header row
      --no-color                Disable colored output
      --no-trunc                Disable column truncation
  -p, --project <NAME_OR_PATH>  Project name or path (cwd-relative, repo-relative, or absolute)
  -h, --help                    Print help
  -V, --version                 Print version
